fixed style.css link

--- a/contact.html
+++ b/contact.html
@@ -1,73 +1,79 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <title>Contact: Giza Wellness</title>
-    <link href="midterm.css" rel="stylesheet" type="text/css" />
-  </head>
+	<head>
+		<meta charset="utf-8" />
+		<title>Contact: Giza Wellness</title>
+		<link href="style.css" rel="stylesheet" type="text/css" />
+	</head>
 
-  <body>
-    <div id="wrapper">
-      <header>
-        <h1>Giza Wellness</h1>
-      </header>
+	<body>
+		<div id="wrapper">
+			<header>
+				<h1>Giza Wellness</h1>
+			</header>
 
-      <nav>
-        <a href="index.html">Home</a>&nbsp;
-        <a href="products.html">Products</a>&nbsp;
-        <a href="marketing.html">Marketing</a>&nbsp;
-        <a href="contact.html">Contact</a>&nbsp;
-      </nav>
+			<nav>
+				<a href="index.html">Home</a>&nbsp;
+				<a href="products.html">Products</a>&nbsp;
+				<a href="marketing.html">Marketing</a>&nbsp;
+				<a href="contact.html">Contact</a>&nbsp;
+			</nav>
 
-      <div id="contacthero"></div>
+			<div id="contacthero"></div>
 
-      <main>
-        <h2>Giza Wellness</h2>
-        <img
-          class="contact-img"
-          src="assets/can-chat-chatting-362.jpg"
-          alt="chatting with a string can"
-        />
-        <p>
-          Whether you are looking to establish your wellness foundation, or
-          become a Wellness Merchant, I am very excited to get in touch with
-          you. Hit me up on any of the below platforms so I can get you
-          established underneath my own
-          <span class="scam"
-            >Synergized Reverse-Funnel Peer-to-Peer Marketing Matrix</span
-          >, and you can earn your own Wellness Merchant certification. Follow
-          the steps, believe in yourself and you can realize your actuality in
-          no time!
-        </p>
-        <div id="social-media">
-          <ul>
-            <li><a href="https://www.facebook.com/">Facebook</a></li>
-            <li><a href="https://www.twitter.com">Twitter</a></li>
-            <li><a href="https://www.instagram.com">Instagram</a></li>
-          </ul>
-        </div>
-        <p>
-          Can chatting photo by
-          <a
-            href="https://www.pexels.com/photo/marketing-man-person-communication-362/
+			<main>
+				<h2>Giza Wellness</h2>
+				<img
+					class="contact-img"
+					src="assets/can-chat-chatting-362.jpg"
+					alt="chatting with a string can"
+				/>
+				<p>
+					Whether you are looking to establish your wellness
+					foundation, or become a Wellness Merchant, I am very excited
+					to get in touch with you. Hit me up on any of the below
+					platforms so I can get you established underneath my own
+					<span class="scam"
+						>Synergized Reverse-Funnel Peer-to-Peer Marketing
+						Matrix</span
+					>, and you can earn your own Wellness Merchant
+					certification. Follow the steps, believe in yourself and you
+					can realize your actuality in no time!
+				</p>
+				<div id="social-media">
+					<ul>
+						<li>
+							<a href="https://www.facebook.com/">Facebook</a>
+						</li>
+						<li><a href="https://www.twitter.com">Twitter</a></li>
+						<li>
+							<a href="https://www.instagram.com">Instagram</a>
+						</li>
+					</ul>
+				</div>
+				<p>
+					Can chatting photo by
+					<a
+						href="https://www.pexels.com/photo/marketing-man-person-communication-362/
 "
-            >Gratisography</a
-          >
-          at Pexels.com.
-        </p>
-      </main>
+						>Gratisography</a
+					>
+					at Pexels.com.
+				</p>
+			</main>
 
-      <footer>
-        <p>
-          &copy; 2019 Giza Wellness. All rights reserved.<br />
-          <a href="mailto:acutler6733mail.kvcc.edu">Alice Cutler</a><br />
-          <a href="http://classes.kvcc.edu/students/~acutler6733/"
-            >Class Home Page</a
-          ><br />
-          last updated:
-          <!-- #BeginDate format:Am1m -->October 17, 2019 17:04<!-- #EndDate -->
-        </p>
-      </footer>
-    </div>
-  </body>
+			<footer>
+				<p>
+					&copy; 2019 Giza Wellness. All rights reserved.<br />
+					<a href="mailto:acutler6733mail.kvcc.edu">Alice Cutler</a
+					><br />
+					<a href="http://classes.kvcc.edu/students/~acutler6733/"
+						>Class Home Page</a
+					><br />
+					last updated:
+					<!-- #BeginDate format:Am1m -->October 17, 2019 17:04<!-- #EndDate -->
+				</p>
+			</footer>
+		</div>
+	</body>
 </html>
